# jmz

./: .env  1.py  A2A_MCP_COMMAND.md  ARCHITECTURE.md  CODE_ANALYSIS.md  DIAGNOSE.md  Dockerfile.agent  Dockerfile.server  FLOW_DIAGRAM.md  PYCHARM_FIX.md  PYCHARM_SETUP.md  README.md  RUN.md  RUN_WINDOWS.md  STATIC_REVIEW.md  TROUBLESHOOTING.md  command.txt  docker-compose.yml  mcp-config.json  pyproject.toml  requirements.txt  run.ps1  run.sh  run_agent.py  start.bat  start.ps1  travel_agency.db  测试输入数据.txt  面试题目.docx
agent_cards/: car_rental_agent.json  hotel_booking_agent.json  orchestrator_agent.json  planner_agent.json
agents/: mcp_client.py  mining_agent.py
docx_temp/docProps/: app.xml  core.xml
docx_temp/word/: document.xml  endnotes.xml  fontTable.xml  footnotes.xml  numbering.xml  settings.xml  styles.xml
logs/: auto_run_20260309_145931.json  auto_run_20260309_150329.json
scripts/: auto_run_orchestrator.py  smoke_air_agent.py  smoke_orchestrator.py  verify_agents.py
servers/: mining_data_server.py  news_server.py  price_server.py
src/a2a_mcp/: __init__.py  gradio_app.py
src/a2a_mcp/agents/: __init__.py  __main__.py
src/a2a_mcp/agents/air_ticketing/: __init__.py  agent.py  mcp_client.py  prompts.py  utils.py
src/a2a_mcp/agents/car_rental/: __init__.py  agent.py  mcp_client.py  prompts.py  utils.py
src/a2a_mcp/agents/hotel_booking/: __init__.py  agent.py  mcp_client.py  prompts.py  utils.py
src/a2a_mcp/agents/orchestrator/: __init__.py  (+5 more)
src/a2a_mcp/common/: agent_executor.py  base_agent.py  llm_mcp_json_agent.py  mcp_server.py  utils.py
(+6 files in other folders)
