[project]
name = "a2a-mcp"
version = "0.1.0"
description = "A2A - MCP Sample"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk[sql]>=0.3.0",
    "gradio>=4.0.0",
    "click>=8.1.8",
    "fastmcp>=1.0",
    "httpx>=0.28.1",
    "langchain-mcp-adapters>=0.0.9",
    "langgraph>=0.4.1",
    "mcp[cli]>=1.5.0",
    "nest-asyncio>=1.6.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pydantic>=2.11.4",
    "litellm",
    "langchain-openai>=1.1.10",
    "langchain-community>=0.4.1",
]

[project.scripts]
a2a-mcp = "a2a_mcp:main"
a2a-mcp-ui = "a2a_mcp.gradio_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
